testing url data

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,19 @@
       <div data-share="googleplus" data-share-url="http://google.com" data-share-title="true"></div>
       <div data-share="email" data-share-url="http://google.com" data-share-title="true" data-share-subject="testing share" data-share-text="hello world"></div>
       <div data-share="whatsapp" data-share-url="http://google.com" data-share-title="true"></div>
+
+      <div data-share="custom" data-share-url="http://google.com" style="
+    height: 30px;
+    background-color: red;
+    width: 30px;
+">
+        <div class="icons8-whatsapp" style="
+    height: 30px;
+    width: 30px;
+    display: block;
+">
+      </div>
+    </div>
     </div>
   </div>
 </body>
