added icon class

--- a/src/index.html
+++ b/src/index.html
@@ -60,14 +60,9 @@
       <div data-share="whatsapp" data-share-url="http://google.com" data-share-title="true"></div>
 
       <div data-share="custom" data-share-url="http://google.com" style="
-    height: 30px;
     background-color: red;
-    width: 30px;
 ">
-        <div class="icons8-whatsapp" style="
-    height: 30px;
-    width: 30px;
-    display: block;
+        <div class="icon icons8-whatsapp" style="
 ">
       </div>
     </div>
