--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/js/share.js" target="_blank">Download</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/fahimc/vanilla-share-buttons" target="_blank">Github</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -254,6 +257,12 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <br>
+          <p>created by Fahim Chowdhury</p>
         </div>
       </div>
     </div>
